2000-09-19  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* throw.c (scm_handle_by_message):  Added a FIXME comment.

	(scm_ithrow):  Removed some redundant tests.  When compiling on
	gcc, always add the GCSE bug workaround.

2000-09-14  Gary Houston  <ghouston@arglist.com>

	* print.c (scm_iprin1): write the ascii delete character as #\del
	instead of '#\', so it can be read back.  like in SCM.

2000-09-12  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* symbols.c (duplicate_string): Don't try to copy the byte after
	the string.  This might not be `\0' and might even not be
	allocated memory.

2000-09-12  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* symbols.c (scm_symbol_p):  Eliminate redundant SCM_IMP test.

2000-09-12  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	This patch unifies the formerly distinct ssymbol and msymbol types
	to a common symbol type scm_tc7_symbol.  The representation of the
	new symbol type uses a double cell with the following layout:
	<type/length, chars, raw_hash, prop-pair>, where the car of
	prop-pair holds the symbol's function property and the cdr of
	prop-pair holds the symbol's other properties.  In the long run,
	these properties will be removed.  Then, the generic property
	functions will be uses.

	* eval.c (SCM_CEVAL), objects.c (scm_class_of), print.c
	(scm_iprin1), tag.c (scm_tag):  Use scm_tc7_symbol instead of
	scm_tc7_ssymbol, scm_tc7_msymbol or scm_tcs_symbols.

	* gc.c (scm_gc_mark):  Mark the symbols property pair.

	(scm_gc_sweep):  There are no symbol slots any more.

	* hash.c (scm_hasher):  Instead of re-calculating the hash value
	of a symbol, use the raw_hash value stored in the symbol itself.

	* properties.h:  Fix typo.

	* strings.[ch] (scm_makstr, scm_makfromstr):  The slot parameter
	is not used any more.

	* symbols.[ch] (scm_strhash):  Deprecated, replaced by a macro.

	(scm_intern_obarray_soft):  Made softness parameter unsigned.

	(scm_string_hash):  New function with the same functionality as