@@ -293,10 +293,9 @@ scm_intern_obarray_soft (const char *name,scm_sizet len,SCM obarray,unsigned int
   SCM_NEWCELL2 (lsym);
   SCM_SETCHARS (lsym, duplicate_string (name, len));
   SCM_SET_SYMBOL_HASH (lsym, raw_hash);
-  SCM_SET_PROP_SLOTS (lsym, scm_cons (SCM_BOOL_F, SCM_BOOL_F));
+  SCM_SET_PROP_SLOTS (lsym, scm_cons (SCM_BOOL_F, SCM_EOL));
   SCM_SETLENGTH (lsym, (long) len, scm_tc7_symbol);
 
-  SCM_SET_SYMBOL_PROPS (lsym, SCM_EOL);
   if (SCM_FALSEP (obarray))
     {
       SCM answer;
@@ -369,7 +368,7 @@ scm_sysintern0_no_module_lookup (const char *name)
       SCM_NEWCELL2 (lsym);
       SCM_SETCHARS (lsym, name);
       SCM_SET_SYMBOL_HASH (lsym, raw_hash);
-      SCM_SET_PROP_SLOTS (lsym, scm_cons (SCM_BOOL_F, SCM_BOOL_F));
+      SCM_SET_PROP_SLOTS (lsym, scm_cons (SCM_BOOL_F, SCM_EOL));
       SCM_SETLENGTH (lsym, (long) len, scm_tc7_symbol);
 
       lsym = scm_cons (lsym, SCM_UNDEFINED);
